# Artificial_Intelligence

./: .gitignore  GPU_SETUP_COMPLETE.md  README.md  render.yaml
ai_website/: GPU_SETUP.md  README.md  app.py  pyproject.toml  requirements.txt  sklearn_metadata.json  sklearn_scaler.pkl  train_ultra_model.py  website_blueprint.py  website_cart.py  website_config.py  website_models.py
ai_website/static/css/: style.css
ai_website/static/js/: main.js
ai_website/static/website/css/: demo.css  styles.css
ai_website/static/website/js/: app.js  demo.js
ai_website/templates/: 404.html  about.html  base.html  chatbot.html  decision_tree_demo.html  demos.html  game_of_life.html  handwriting.html  home.html  housing_prices.html  kmeans_demo.html  learn.html  learn_electrician.html  learn_electrician_topic.html  linear_regression_demo.html  monte_carlo_pi.html  neural_network_demo.html  password_strength.html  pathfinding.html  projects.html  references.html  svm_demo.html
ai_website/templates/website/: base.html  cart.html  checkout.html  demo.html  index.html  success.html
ai_website/tools/: prepare_real_data.py
cat_dog_demo/: README.md  cat_dog_ultra_metadata.json
cat_dog_demo/templates/: cat_dog_demo.html
